--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <title>从零开始搭建react工程</title>
-  </head>
-  <body>
-  <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/iconfont/iconfont.css">
+  <title>搭建react工程</title>
+</head>
+
+<body>
+  <div style="height: 100%; min-height: 600px" id='root'></div>
+</body>
+
 </html>
