--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/iconfont/iconfont.css">
-  <title>搭建react工程</title>
+  <title>my-react-demo</title>
 </head>
 
 <body>
