--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="/iconfont/iconfont.css">
+  <link rel="stylesheet" type="text/css" href="./iconfont/iconfont.css">
   <title>my-react-demo</title>
 </head>
 
